--- a/index.html
+++ b/index.html
@@ -1,1 +1,124 @@
-Hello!
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>BONUS NEW MEMBER 100%</title>
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+
+    <style type="text/css">
+    body {
+      background: black;
+      /* background: url(https://bonushunter2023.github.io/bg.png) no-repeat center !important; */
+      background-size: cover !important;
+      background-attachment: fixed !important;
+      background-position-x: center !important;
+      background-position-y: center !important;
+      font-family: sans-serif;
+      margin: 0;
+      padding: 15px;
+      font-family: sans-serif;
+      margin: 0;
+      padding: 15px;
+    }
+    .img-r {
+      width: 100%;
+    }
+    .wrap {
+      width: 100%;
+      max-width: 500px;
+      margin: 0 auto;
+    }
+    .profile {
+      text-align: center;
+      color: #ffffff;
+      text-shadow: 2px 1px #363636;
+    }
+    .photo {
+      margin: 10px;
+      border-radius: 50%;
+    }
+    .profile_name {
+      font-weight: bold;
+      display: block;
+    }
+    .at {
+      font-size: 13px;
+    }
+    .links ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    .links ul li {
+      margin: 14px 0;
+    }
+    .link {
+      padding: 14px;
+      display: block;
+      background-color: #c80043;
+      text-align: center;
+      text-decoration: none;
+      border-radius: 4px;
+      transition: ease all 0.3s;
+      color: #FFF;
+    }
+    .link:hover {
+      background-color: #a5063b;
+    }
+    .card {
+      padding: 10px;
+      background-color: #FFF;
+      border-radius: 4px;
+    }
+    .card h3 {
+      margin: 0;
+      color: #202024;
+    }
+    .card p {
+      margin: 5px 0;
+      font-size: 13px;
+      color: #202024;
+    }
+    </style>
+</head>
+<body>
+<div class="wrap">
+  <div class="profile">
+<!--     <img src="profil.png" class="photo"> -->
+    <span class="profile_name">Bonus New Member 100%</span>
+    <span class="at">Klaim di awal melalui Livechat</span>
+  </div>
+ <div class="links">
+    <ul>
+      <li>
+<a href="https://jangkrikads.cyou/link.php?member=admin">
+<img src="https://bonusnew.github.io/a2c0ea84d12903e37f67c06ffb5c1131.gif" class="img-r">
+</a>
+</li>    
+
+<li>
+<a href="https://jangkrikiklan.cyou/link.php?member=admin">
+<img src="https://bonusnew.github.io/407e06d9b4a787ee6cdb115132902db4.jpg" class="img-r">
+</a>
+</li>
+    </ul>
+  </div>
+</div>
+	
+<!-- Histats.com  START  (aync)-->
+<script type="text/javascript">var _Hasync= _Hasync|| [];
+_Hasync.push(['Histats.start', '1,4729279,4,0,0,0,00010000']);
+_Hasync.push(['Histats.fasi', '1']);
+_Hasync.push(['Histats.track_hits', '']);
+(function() {
+var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+hs.src = ('//s10.histats.com/js15_as.js');
+(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+})();</script>
+<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4729279&101" alt="website statistics" border="0"></a></noscript>
+<!-- Histats.com  END  -->
+	
+</body>
+</html>
