--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
  <div class="links">
     <ul>
       <li>
-<a href="https://jangkrikads.cyou/link.php?member=admin">
+<a rel="nofollow sponsored" href="https://jangkrikads.cyou/link.php?member=admin">
 <img src="https://bonusnew.github.io/a2c0ea84d12903e37f67c06ffb5c1131.gif" class="img-r">
 </a>
 </li>    
 
 <li>
-<a href="https://jangkrikiklan.cyou/link.php?member=admin">
+<a rel="nofollow sponsored" href="https://jangkrikiklan.cyou/link.php?member=admin">
 <img src="https://bonusnew.github.io/407e06d9b4a787ee6cdb115132902db4.jpg" class="img-r">
 </a>
 </li>
@@ -109,7 +109,7 @@
 	
 <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
-_Hasync.push(['Histats.start', '1,4729279,4,0,0,0,00010000']);
+_Hasync.push(['Histats.start', '1,4730830,4,0,0,0,00010000']);
 _Hasync.push(['Histats.fasi', '1']);
 _Hasync.push(['Histats.track_hits', '']);
 (function() {
@@ -117,7 +117,7 @@ var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async
 hs.src = ('//s10.histats.com/js15_as.js');
 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
 })();</script>
-<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4729279&101" alt="website statistics" border="0"></a></noscript>
+<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4730830&101" alt="counter easy hit" border="0"></a></noscript>
 <!-- Histats.com  END  -->
 	
 </body>
