--- a/index.html
+++ b/index.html
@@ -4,8 +4,38 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>BONUS NEW MEMBER 100%</title>
+	<meta name="keywords" content="Bonus New Member 100%, Bebas pilih game bonus 100%, Bonus Member Baru 100%" />
+	<meta name="description" content="bonus new member 100% bebas pilih gamenya, promo tahun baru segera daftar!"/>
+	<link rel="canonical" href="https://bonusnew.github.io" />
+	<meta content='never' name='expires'/>
+	<meta content='always' name='revisit-after'/>
+	<meta content='follow, all' name='yahoobot'/>
+	<meta content='follow, all' name='ZyBorg'/>
+	<meta content='ALL' name='SPIDERS'/>
+	<meta content='general' name='rating'/>
+	<meta content='all-language' http-equiv='Content-Language'/>
+	<meta content='document' name='resource-type'/>
+	<meta content='global' name='distribution'/>
+	<meta content='id' name='language'/>
+	<meta content='All,INDEX,follow,noodp,noydir' name='Robots'/>
+	<meta content='follow, all' name='bingbot'/>
+	<meta content='Aeiwi, Alexa, AllTheWeb, AltaVista, AOL Netfind, Anzwers, Canada, DirectHit, EuroSeek, Excite, Overture, Go, Google, HotBot, InfoMak, Kanoodle, Lycos, MasterSite, National Directory, Northern Light, SearchIt, SimpleSearch, WebsMostLinked, WebTop, What-U-Seek, AOL, Yahoo, WebCrawler, Infoseek, Excite, Magellan, LookSmart, bing, CNET, Googlebot' name='search engines'/>
+	<meta content='follow, all' name='Scooter'/>
+	<meta content='all' name='audience'/>
+	<meta content='follow, all' name='msnbot'/>
+	<meta content='general' name='rating'/>
+	<meta content='jangkrik4d' name='Author'/>
+	<meta content='follow, all' name='alexabot'/>
+	<meta content='index,follow, snipet' name='googlebot'/>
+	<meta content='follow, all' name='Googlebot-Image'/>
+	<meta content='Indonesia' name='geo.placename'/>
+	<meta content='true' name='MSSmartTagsPreventParsing'/>
+	<meta content='follow, all' name='Slurp'/>
+	<meta content='ALL' name='WEBCRAWLERS'/>
+	<meta content='bonusnew.github.io' name='generator'/>
+	<meta content='id' name='geo.country'/>
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 
     <style type="text/css">
     body {
@@ -20,12 +50,14 @@
       padding: 15px;
       font-family: sans-serif;
       margin: 0;
-      padding: 15px;
+/*       padding: 15px; */
+      padding-top: 1rem;
     }
     .img-r {
       width: 100%;
     }
     .wrap {
+      padding-top: 2rem;
       width: 100%;
       max-width: 500px;
       margin: 0 auto;
