--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/ico" href="https://bonusnew.github.io/favicon.png" />
 	<title>BONUS NEW MEMBER 100%</title>
 	<meta name="keywords" content="Bonus New Member 100%, Bebas pilih game bonus 100%, Bonus Member Baru 100%" />
 	<meta name="description" content="bonus new member 100% bebas pilih gamenya, promo tahun baru segera daftar!"/>
