--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
  <div class="links">
     <ul>
       <li>
-<a rel="nofollow sponsored" href="https://jangkrikads.cyou/link.php?member=admin">
+<a rel="nofollow sponsored" href="https://linksky.io/promoseratus">
 <img src="https://bonusnew.github.io/a2c0ea84d12903e37f67c06ffb5c1131.gif" class="img-r">
 </a>
 </li>    
 
 <li>
-<a rel="nofollow sponsored" href="https://jangkrikiklan.cyou/link.php?member=admin">
+<a rel="nofollow sponsored" href="https://linksky.io/promo100">
 <img src="https://bonusnew.github.io/407e06d9b4a787ee6cdb115132902db4.jpg" class="img-r">
 </a>
 </li>
