--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/ico" href="https://bonusnew.github.io/favicon.png" />
-	<title>BONUS NEW MEMBER 100%</title>
-	<meta name="keywords" content="Bonus New Member 100%, Bebas pilih game bonus 100%, Bonus Member Baru 100%" />
-	<meta name="description" content="bonus new member 100% bebas pilih gamenya, promo tahun baru segera daftar!"/>
+	<title>INFO PROMO BONUS 100%</title>
+	<meta name="keywords" content="Bonus New Member 100%, Bebas pilih bonus 100%, Bonus Member Baru 100%" />
+	<meta name="description" content="bonus new member 100% bebas pilih, promo tahun baru segera daftar!"/>
 	<link rel="canonical" href="https://bonusnew.github.io" />
 	<meta content='never' name='expires'/>
 	<meta content='always' name='revisit-after'/>
@@ -41,7 +41,6 @@
     <style type="text/css">
     body {
       background: black;
-      /* background: url(https://bonushunter2023.github.io/bg.png) no-repeat center !important; */
       background-size: cover !important;
       background-attachment: fixed !important;
       background-position-x: center !important;
@@ -120,8 +119,8 @@
 <div class="wrap">
   <div class="profile">
 <!--     <img src="profil.png" class="photo"> -->
-    <span class="profile_name">Bonus New Member 100%</span>
-    <span class="at">Klaim di awal melalui Livechat</span>
+<!--     <span class="profile_name">Bonus New Member 100%</span>
+    <span class="at">Klaim di awal melalui Livechat</span> -->
   </div>
  <div class="links">
     <ul>
